--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 /* Global styles */
+@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap');
 @import './styles/themes.css';
 @import './styles/main.css';
 @import './styles/visualization.css';
