--- a/src/styles/generated-answer.css
+++ b/src/styles/generated-answer.css
@@ -46,6 +46,15 @@
   line-height: 1.4;
 }
 
+.generated-answer-text .token-with-underline.special-token {
+  font-size: 0.75em;
+  color: var(--text-tertiary, #888);
+  background-color: var(--bg-special-token, rgba(128, 128, 128, 0.08));
+  padding: 1px 2px 2px 2px;
+  border-radius: 3px;
+  font-weight: normal;
+}
+
 .answer-caret {
   display: inline-block;
   margin-left: 2px;
