--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* Global styles */
 @import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap');
 @import './styles/themes.css';
 @import './styles/main.css';
 @import './styles/visualization.css';
