--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -230,6 +230,8 @@ h2 {
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
+  position: relative;
+  /* For absolute positioning of labels panel */
 }
 
 .visualization-canvas {
